CollectionOptions::validate() fails if a UUID is present.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.8
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Repl 2017-05-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CollectionOptions started supporting an optional collection UUID in SERVER-27987. The collection UUID is generated by the server and is not permitted as part of the collection options when provided by a user (as opposed to reading the existing collection metadata using listCollections). This behavior is controlled by the CollectionOptions::ParseKind enumeration when calling CollectionOptions::parse().

      CollectionOptions also supports validation by calling CollectionOptions::validate(). Currently, validate() will fail if the metadata contains a collection UUID.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: