SERVER-29255 CollectionOptions with UUID passes validation